--- a/app.json
+++ b/app.json
@@ -81,6 +81,258 @@
         ]
       },
       {
+        "id": "co2-humidity-valve__ventilation_state_changed",
+        "title": {
+          "en": "Ventilation state is changed",
+          "nl": "Ventilatie stand is aangepast"
+        },
+        "titleFormatted": {
+          "en": "Ventilation state is changed",
+          "nl": "Ventilatie stand is aangepast"
+        },
+        "tokens": [
+          {
+            "name": "old_value",
+            "type": "string",
+            "title": {
+              "en": "Old value ventilation state",
+              "nl": "Oude waarde ventilatie stand"
+            }
+          },
+          {
+            "name": "new_value",
+            "type": "string",
+            "title": {
+              "en": "New value ventilation state",
+              "nl": "Nieuwe waarde ventilatie stand"
+            }
+          }
+        ],
+        "args": [
+          {
+            "type": "device",
+            "name": "device",
+            "filter": "driver_id=co2-humidity-valve"
+          }
+        ]
+      },
+      {
+        "id": "co2-humidity-valve__ventilation_time_state_remain_changed",
+        "title": {
+          "en": "Duration current state is changed",
+          "nl": "Looptijd huidige stand is aangepast"
+        },
+        "titleFormatted": {
+          "en": "Duration current state is changed",
+          "nl": "Looptijd huidige stand is aangepast"
+        },
+        "tokens": [
+          {
+            "name": "old_value",
+            "type": "number",
+            "title": {
+              "en": "Old value duration current state",
+              "nl": "Oude waarde looptijd huidige stand"
+            }
+          },
+          {
+            "name": "new_value",
+            "type": "number",
+            "title": {
+              "en": "New value duration current state",
+              "nl": "Nieuwe waarde looptijd huidige stand"
+            }
+          }
+        ],
+        "args": [
+          {
+            "type": "device",
+            "name": "device",
+            "filter": "driver_id=co2-humidity-valve"
+          }
+        ]
+      },
+      {
+        "id": "co2-humidity-valve__ventilation_time_state_end_changed",
+        "title": {
+          "en": "End time of current state is changed",
+          "nl": "Eind tijd huidige stand is aangepast"
+        },
+        "titleFormatted": {
+          "en": "End time of current state is changed",
+          "nl": "Eind tijd huidige stand is aangepast"
+        },
+        "tokens": [
+          {
+            "name": "old_value",
+            "type": "string",
+            "title": {
+              "en": "Old value end time of current state",
+              "nl": "Oude waarde eind tijd huidige stand"
+            }
+          },
+          {
+            "name": "new_value",
+            "type": "string",
+            "title": {
+              "en": "New value end time of current state",
+              "nl": "Nieuwe waarde eind tijd huidige stand"
+            }
+          }
+        ],
+        "args": [
+          {
+            "type": "device",
+            "name": "device",
+            "filter": "driver_id=co2-humidity-valve"
+          }
+        ]
+      },
+      {
+        "id": "co2-humidity-valve__ventilation_mode_changed",
+        "title": {
+          "en": "Ventilation mode is changed",
+          "nl": "Ventilatie modus is aangepast"
+        },
+        "titleFormatted": {
+          "en": "Ventilation mode is changed",
+          "nl": "Ventilatie modus is aangepast"
+        },
+        "tokens": [
+          {
+            "name": "old_value",
+            "type": "string",
+            "title": {
+              "en": "Old value ventilation mode",
+              "nl": "Oude waarde ventilatie modus"
+            }
+          },
+          {
+            "name": "new_value",
+            "type": "string",
+            "title": {
+              "en": "New value ventilation mode",
+              "nl": "Nieuwe waarde ventilatie modus"
+            }
+          }
+        ],
+        "args": [
+          {
+            "type": "device",
+            "name": "device",
+            "filter": "driver_id=co2-humidity-valve"
+          }
+        ]
+      },
+      {
+        "id": "co2-humidity-valve__ventilation_flow_level_target_changed",
+        "title": {
+          "en": "Flow level target is changed",
+          "nl": "Doel doorstroomniveau is aangepast"
+        },
+        "titleFormatted": {
+          "en": "Flow level target is changed",
+          "nl": "Doel doorstroomniveau is aangepast"
+        },
+        "tokens": [
+          {
+            "name": "old_value",
+            "type": "number",
+            "title": {
+              "en": "Old value flow level target",
+              "nl": "Oude waarde doel doorstroomniveau"
+            }
+          },
+          {
+            "name": "new_value",
+            "type": "number",
+            "title": {
+              "en": "New value flow level target",
+              "nl": "Nieuwe waarde doel doorstroomniveau"
+            }
+          }
+        ],
+        "args": [
+          {
+            "type": "device",
+            "name": "device",
+            "filter": "driver_id=co2-humidity-valve"
+          }
+        ]
+      },
+      {
+        "id": "co2-humidity-valve__sensor_air_quality_rh_changed",
+        "title": {
+          "en": "Air quality (RH) is changed",
+          "nl": "Lucht kwaliteit (RH) is aangepast"
+        },
+        "titleFormatted": {
+          "en": "Air quality (RH) is changed",
+          "nl": "Lucht kwaliteit (RH) is aangepast"
+        },
+        "tokens": [
+          {
+            "name": "old_value",
+            "type": "number",
+            "title": {
+              "en": "Old value air quality (RH)",
+              "nl": "Oude waarde lucht kwaliteit (RH)"
+            }
+          },
+          {
+            "name": "new_value",
+            "type": "number",
+            "title": {
+              "en": "New value air quality (RH)",
+              "nl": "Nieuwe waarde lucht kwaliteit (RH)"
+            }
+          }
+        ],
+        "args": [
+          {
+            "type": "device",
+            "name": "device",
+            "filter": "driver_id=co2-humidity-valve"
+          }
+        ]
+      },
+      {
+        "id": "co2-humidity-valve__sensor_air_quality_co2_changed",
+        "title": {
+          "en": "Air quality (CO2) is changed",
+          "nl": "Lucht kwaliteit (CO2) is aangepast"
+        },
+        "titleFormatted": {
+          "en": "Air quality (CO2) is changed",
+          "nl": "Lucht kwaliteit (CO2) is aangepast"
+        },
+        "tokens": [
+          {
+            "name": "old_value",
+            "type": "number",
+            "title": {
+              "en": "Old value air quality (CO2)",
+              "nl": "Oude waarde lucht kwaliteit (CO2)"
+            }
+          },
+          {
+            "name": "new_value",
+            "type": "number",
+            "title": {
+              "en": "New value air quality (CO2)",
+              "nl": "Nieuwe waarde lucht kwaliteit (CO2)"
+            }
+          }
+        ],
+        "args": [
+          {
+            "type": "device",
+            "name": "device",
+            "filter": "driver_id=co2-humidity-valve"
+          }
+        ]
+      },
+      {
         "id": "co2-room-sensor__ventilation_state_changed",
         "title": {
           "en": "Ventilation state is changed",
@@ -1558,6 +1810,236 @@
       }
     ],
     "conditions": [
+      {
+        "id": "co2-humidity-valve__ventilation_state_is",
+        "title": {
+          "en": "Ventilation state !{{is|isn't}} ...",
+          "nl": "Ventilatie stand !{{is|is niet}} ..."
+        },
+        "titleFormatted": {
+          "en": "Ventilation state !{{is|isn't}} [[state]]",
+          "nl": "Ventilatie stand !{{is|is niet}} [[state]]"
+        },
+        "args": [
+          {
+            "type": "device",
+            "name": "device",
+            "filter": "driver_id=co2-humidity-valve"
+          },
+          {
+            "name": "state",
+            "type": "dropdown",
+            "values": [
+              {
+                "id": "AUTO",
+                "title": {
+                  "en": "Auto",
+                  "nl": "Automatisch"
+                }
+              },
+              {
+                "id": "AUT1",
+                "title": {
+                  "en": "Auto 1",
+                  "nl": "Automatisch 1"
+                }
+              },
+              {
+                "id": "AUT2",
+                "title": {
+                  "en": "Auto 2",
+                  "nl": "Automatisch 2"
+                }
+              },
+              {
+                "id": "AUT3",
+                "title": {
+                  "en": "Auto 3",
+                  "nl": "Automatisch 3"
+                }
+              },
+              {
+                "id": "MAN1",
+                "title": {
+                  "en": "Manual 1",
+                  "nl": "Tijdelijk 1"
+                }
+              },
+              {
+                "id": "MAN2",
+                "title": {
+                  "en": "Manual 2",
+                  "nl": "Tijdelijk 2"
+                }
+              },
+              {
+                "id": "MAN3",
+                "title": {
+                  "en": "Manual 3",
+                  "nl": "Tijdelijk 3"
+                }
+              },
+              {
+                "id": "CNT1",
+                "title": {
+                  "en": "Continue 1",
+                  "nl": "Permanent 1"
+                }
+              },
+              {
+                "id": "CNT2",
+                "title": {
+                  "en": "Continue 2",
+                  "nl": "Permanent 2"
+                }
+              },
+              {
+                "id": "CNT3",
+                "title": {
+                  "en": "Continue 3",
+                  "nl": "Permanent 3"
+                }
+              },
+              {
+                "id": "EMPT",
+                "title": {
+                  "en": "Absence",
+                  "nl": "Afwezigheid"
+                }
+              },
+              {
+                "id": "MAN1x2",
+                "title": {
+                  "en": "Manual 1x2",
+                  "nl": "Tijdelijk 1x2"
+                }
+              },
+              {
+                "id": "MAN2x2",
+                "title": {
+                  "en": "Manual 2x2",
+                  "nl": "Tijdelijk 2x2"
+                }
+              },
+              {
+                "id": "MAN3x2",
+                "title": {
+                  "en": "Manual 3x2",
+                  "nl": "Tijdelijk 3x2"
+                }
+              },
+              {
+                "id": "MAN1x3",
+                "title": {
+                  "en": "Manual 1x3",
+                  "nl": "Tijdelijk 1x3"
+                }
+              },
+              {
+                "id": "MAN2x3",
+                "title": {
+                  "en": "Manual 2x3",
+                  "nl": "Tijdelijk 2x3"
+                }
+              },
+              {
+                "id": "MAN3x3",
+                "title": {
+                  "en": "Manual 3x3",
+                  "nl": "Tijdelijk 3x3"
+                }
+              },
+              {
+                "id": "-",
+                "title": {
+                  "en": "Unknown",
+                  "nl": "Onbekend"
+                }
+              }
+            ]
+          }
+        ]
+      },
+      {
+        "id": "co2-humidity-valve__ventilation_mode_is",
+        "title": {
+          "en": "Ventilation mode !{{is|isn't}} ...",
+          "nl": "Ventilatie modus !{{is|is niet}} ..."
+        },
+        "titleFormatted": {
+          "en": "Ventilation mode !{{is|isn't}} [[mode]]",
+          "nl": "Ventilatie modus !{{is|is niet}} [[mode]]"
+        },
+        "args": [
+          {
+            "type": "device",
+            "name": "device",
+            "filter": "driver_id=co2-humidity-valve"
+          },
+          {
+            "name": "mode",
+            "type": "dropdown",
+            "values": [
+              {
+                "id": "AUTO",
+                "title": {
+                  "en": "Auto",
+                  "nl": "Automatisch"
+                }
+              },
+              {
+                "id": "MANU",
+                "title": {
+                  "en": "Manual",
+                  "nl": "Handmatig"
+                }
+              },
+              {
+                "id": "OVRL",
+                "title": {
+                  "en": "OVRL",
+                  "nl": "OVRL"
+                }
+              },
+              {
+                "id": "EXTN",
+                "title": {
+                  "en": "EXTN",
+                  "nl": "EXTN"
+                }
+              },
+              {
+                "id": "COOL",
+                "title": {
+                  "en": "COOL",
+                  "nl": "COOL"
+                }
+              },
+              {
+                "id": "N/A",
+                "title": {
+                  "en": "N/A",
+                  "nl": "N/A"
+                }
+              },
+              {
+                "id": "DSBL",
+                "title": {
+                  "en": "DSBL",
+                  "nl": "DSBL"
+                }
+              },
+              {
+                "id": "-",
+                "title": {
+                  "en": "Unknown",
+                  "nl": "Onbekend"
+                }
+              }
+            ]
+          }
+        ]
+      },
       {
         "id": "co2-room-sensor__ventilation_state_is",
         "title": {
@@ -3161,6 +3643,149 @@
     ],
     "actions": [
       {
+        "id": "co2-humidity-valve__change_ventilation_state",
+        "title": {
+          "en": "Change ventilation state to",
+          "nl": "Verander ventilatie stand naar"
+        },
+        "titleFormatted": {
+          "en": "Change ventilation state to [[ventilation_state]]",
+          "nl": "Verander ventilatie stand naar [[ventilation_state]]"
+        },
+        "args": [
+          {
+            "type": "device",
+            "name": "device",
+            "filter": "driver_id=co2-humidity-valve"
+          },
+          {
+            "type": "dropdown",
+            "name": "ventilation_state",
+            "values": [
+              {
+                "id": "AUTO",
+                "label": {
+                  "en": "Auto",
+                  "nl": "Automatisch"
+                }
+              },
+              {
+                "id": "AUT1",
+                "label": {
+                  "en": "Auto 1",
+                  "nl": "Automatisch 1"
+                }
+              },
+              {
+                "id": "AUT2",
+                "label": {
+                  "en": "Auto 2",
+                  "nl": "Automatisch 2"
+                }
+              },
+              {
+                "id": "AUT3",
+                "label": {
+                  "en": "Auto 3",
+                  "nl": "Automatisch 3"
+                }
+              },
+              {
+                "id": "MAN1",
+                "label": {
+                  "en": "Manual 1",
+                  "nl": "Tijdelijk 1"
+                }
+              },
+              {
+                "id": "MAN2",
+                "label": {
+                  "en": "Manual 2",
+                  "nl": "Tijdelijk 2"
+                }
+              },
+              {
+                "id": "MAN3",
+                "label": {
+                  "en": "Manual 3",
+                  "nl": "Tijdelijk 3"
+                }
+              },
+              {
+                "id": "CNT1",
+                "label": {
+                  "en": "Continue 1",
+                  "nl": "Permanent 1"
+                }
+              },
+              {
+                "id": "CNT2",
+                "label": {
+                  "en": "Continue 2",
+                  "nl": "Permanent 2"
+                }
+              },
+              {
+                "id": "CNT3",
+                "label": {
+                  "en": "Continue 3",
+                  "nl": "Permanent 3"
+                }
+              },
+              {
+                "id": "EMPT",
+                "label": {
+                  "en": "Absence",
+                  "nl": "Afwezigheid"
+                }
+              },
+              {
+                "id": "MAN1x2",
+                "label": {
+                  "en": "Manual 1x2",
+                  "nl": "Tijdelijk 1x2"
+                }
+              },
+              {
+                "id": "MAN2x2",
+                "label": {
+                  "en": "Manual 2x2",
+                  "nl": "Tijdelijk 2x2"
+                }
+              },
+              {
+                "id": "MAN3x2",
+                "label": {
+                  "en": "Manual 3x2",
+                  "nl": "Tijdelijk 3x2"
+                }
+              },
+              {
+                "id": "MAN1x3",
+                "label": {
+                  "en": "Manual 1x3",
+                  "nl": "Tijdelijk 1x3"
+                }
+              },
+              {
+                "id": "MAN2x3",
+                "label": {
+                  "en": "Manual 2x3",
+                  "nl": "Tijdelijk 2x3"
+                }
+              },
+              {
+                "id": "MAN3x3",
+                "label": {
+                  "en": "Manual 3x3",
+                  "nl": "Tijdelijk 3x3"
+                }
+              }
+            ]
+          }
+        ]
+      },
+      {
         "id": "co2-room-sensor__change_ventilation_state",
         "title": {
           "en": "Change ventilation state to",
@@ -4341,6 +4966,47 @@
         }
       ],
       "id": "co2-box-sensor"
+    },
+    {
+      "name": {
+        "en": "CO2 and Humidity Valve",
+        "nl": "Regelklep met vocht- en co2-sensor"
+      },
+      "class": "sensor",
+      "capabilities": [
+        "ventilation_state",
+        "ventilation_time_state_remain",
+        "ventilation_time_state_end",
+        "ventilation_mode",
+        "ventilation_flow_level_target",
+        "sensor_air_quality_rh",
+        "sensor_air_quality_co2"
+      ],
+      "platforms": [
+        "local"
+      ],
+      "connectivity": [
+        "lan"
+      ],
+      "images": {
+        "small": "/drivers/co2-humidity-valve/assets/images/small.png",
+        "large": "/drivers/co2-humidity-valve/assets/images/large.png",
+        "xlarge": "/drivers/co2-humidity-valve/assets/images/xlarge.png"
+      },
+      "pair": [
+        {
+          "id": "list_my_devices",
+          "template": "list_devices",
+          "navigation": {
+            "next": "add_my_devices"
+          }
+        },
+        {
+          "id": "add_my_devices",
+          "template": "add_devices"
+        }
+      ],
+      "id": "co2-humidity-valve"
     },
     {
       "name": {
